feat: add header and footer to html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,45 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header class="header-container">
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="contacts" class="nav-link">Contacts</a>
+          </li>
+          <li class="nav-item">
+            <a href="about me" class="nav-link">About me</a>
+          </li>
+          <li class="nav-item"><a href="skills" class="nav-link">Skills</a></li>
+          <li class="nav-item"><a href="code" class="nav-link">Code</a></li>
+          <li class="nav-item">
+            <a href="education" class="nav-link">Education</a>
+          </li>
+          <li class="nav-item">
+            <a href="languages" class="nav-link">Languages</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer class="footer">
+      <div class="container footer-container">
+        <div>
+          2025
+          <a href="https://github.com/AllaLuk" class="github nav-link"
+            >AllaLuk</a
+          >
+        </div>
+        <div>
+          <img
+            class="rs-school-logo"
+            src="assets/rs-school-logo.svg"
+            alt="logo rs-school"
+          />
+          <a href="https://rs.school/courses/javascript-ru">rss</a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
