--- a/index.html
+++ b/index.html
@@ -33,23 +33,104 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="main-container">
+      <section class="section-profile" id="profile">
+        <img
+          src="assets/CV-image-2.jpg"
+          alt="author photo"
+          class="profile-photo"
+        />
+        <div class="section-title-subtitle">
+          <h1 class="section-title">ALLA LUKASH</h1>
+          <h3 class="section-subtitle">Junior Front-End Developer</h3>
+        </div>
+      </section>
+      <section class="section" id="contacts">
+        <h2 class="section-title">Contacts</h2>
+        <ul class="section-list">
+          <li class="section-item-contact">Phone +38 (099) 5555501</li>
+          <li class="section-item-contact">
+            Email:
+            <a href="allaluk@gmail.com" title="email">allaluk@gmail.com</a>
+          </li>
+          <li class="section-item-contact">
+            Git-Hub:
+            <a href="https://github.com/AllaLuk" title="github">AllaLuk</a>
+          </li>
+          <li class="section-item-contact">Discord: Alla Lukash</li>
+          <li class="section-item-contact">Location: Wroclaw, Poland</li>
+        </ul>
+      </section>
+      <section class="section" id="about me">
+        <h2 class="section-title">About me</h2>
+        <p>
+          I'm just starting my career in frontend development, but I feel very
+          confident in my skills and potential. I pick things up quickly,
+          collaborate effectively in a team environment, and am genuinely
+          interested in my ongoing professional development. I've independently
+          mastered the basics of HTML and CSS and have now begun studying
+          JavaScript. My English proficiency is strong enough for professional
+          tasks and communication, and I actively practice my speaking skills. I
+          am a very motivated person and I am sure that I will be useful to work
+          in your team.
+        </p>
+      </section>
+      <section class="section" id="skills">
+        <h2 class="section-title">Skills</h2>
+        <ul class="section-list">
+          <li class="section-item">HTML 5, CSS 3</li>
+          <li class="section-item">JavaScript (begginer)</li>
+          <li class="section-item">Git, GitHub</li>
+          <li class="section-item">VS Code</li>
+        </ul>
+      </section>
+      <section class="section" id="code">
+        <h2 class="section-title">Code example</h2>
+        <p>
+          function bmi(weight, height) { <br />
+
+          const bmi = weight/(height*height); <br />
+
+          return bmi <= 18.5 ? 'Underweight': bmi <= 25 ? 'Normal': bmi <= 30 ?
+          'Overweight': 'Obese'; <br />
+          }
+        </p>
+      </section>
+      <section class="section" id="education">
+        <h2 class="section-title">Education</h2>
+        <ul class="section-list">
+          <li class="section-item education-items">Higer medical education</li>
+          <li class="section-item education-items">
+            Course on YouTube "Basic of HTML, CSS for begginers" (16 hours)
+          </li>
+          <li class="section-item education-items">
+            JavaScript course (in progress)
+          </li>
+          <li class="section-projects">My projects</li>
+        </ul>
+      </section>
+      <section class="section" id="languages">
+        <h2 class="section-title">Languages</h2>
+        <ul class="section-list">
+          <li class="section-item languages-item">Ukraine - native</li>
+          <li class="section-item languages-item">English - intermediate</li>
+          <li class="section-item languages-item">Polish - beginner</li>
+          <li class="section-item languages-item">Russian - advance</li>
+        </ul>
+      </section>
+    </main>
     <footer class="footer">
-      <div class="container footer-container">
-        <div>
-          2025
-          <a href="https://github.com/AllaLuk" class="github nav-link"
-            >AllaLuk</a
-          >
-        </div>
-        <div>
-          <img
-            class="rs-school-logo"
-            src="assets/rs-school-logo.svg"
-            alt="logo rs-school"
-          />
-          <a href="https://rs.school/courses/javascript-ru">rss</a>
-        </div>
+      <div class="container-footer-container">
+        "2025"
+        <a href="https://github.com/AllaLuk" class="github nav-link">AllaLuk</a>
+      </div>
+      <div>
+        <img
+          class="rs-school-logo"
+          src="assets/rs-school-logo.svg"
+          alt="logo rs-school"
+        />
+        <a href="https://rs.school/courses/javascript-ru">rss</a>
       </div>
     </footer>
   </body>
