--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
       <nav class="nav">
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="contacts" class="nav-link">Contacts</a>
+            <a href="#contacts" class="nav-link">Contacts</a>
           </li>
           <li class="nav-item">
-            <a href="about me" class="nav-link">About me</a>
-          </li>
-          <li class="nav-item"><a href="skills" class="nav-link">Skills</a></li>
-          <li class="nav-item"><a href="code" class="nav-link">Code</a></li>
-          <li class="nav-item">
-            <a href="education" class="nav-link">Education</a>
+            <a href="#about me" class="nav-link">About me</a>
           </li>
           <li class="nav-item">
-            <a href="languages" class="nav-link">Languages</a>
+            <a href="#skills" class="nav-link">Skills</a>
+          </li>
+          <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+          <li class="nav-item">
+            <a href="#education" class="nav-link">Education</a>
+          </li>
+          <li class="nav-item">
+            <a href="#languages" class="nav-link">Languages</a>
           </li>
         </ul>
       </nav>
@@ -48,17 +50,17 @@
       <section class="section" id="contacts">
         <h2 class="section-title">Contacts</h2>
         <ul class="section-list">
-          <li class="section-item-contact">Phone +38 (099) 5555501</li>
-          <li class="section-item-contact">
+          <li class="section-item">Phone +38 (099) 5555501</li>
+          <li class="section-item">
             Email:
             <a href="allaluk@gmail.com" title="email">allaluk@gmail.com</a>
           </li>
-          <li class="section-item-contact">
+          <li class="section-item">
             Git-Hub:
             <a href="https://github.com/AllaLuk" title="github">AllaLuk</a>
           </li>
-          <li class="section-item-contact">Discord: Alla Lukash</li>
-          <li class="section-item-contact">Location: Wroclaw, Poland</li>
+          <li class="section-item">Discord: Alla Lukash</li>
+          <li class="section-item">Location: Wroclaw, Poland</li>
         </ul>
       </section>
       <section class="section" id="about me">
@@ -106,32 +108,35 @@
           <li class="section-item education-items">
             JavaScript course (in progress)
           </li>
-          <li class="section-projects">My projects</li>
+          <li class="section-projects">
+            Projects experience:
+            <a href="https://allaluk.github.io/rsschool-cv/cv" target="_blank"
+              >CV Project</a
+            >
+          </li>
         </ul>
       </section>
       <section class="section" id="languages">
         <h2 class="section-title">Languages</h2>
         <ul class="section-list">
-          <li class="section-item languages-item">Ukraine - native</li>
-          <li class="section-item languages-item">English - intermediate</li>
-          <li class="section-item languages-item">Polish - beginner</li>
-          <li class="section-item languages-item">Russian - advance</li>
+          <li class="section-item-languages">Ukraine - native</li>
+          <li class="section-item-languages">English - intermediate</li>
+          <li class="section-item-languages">Polish - beginner</li>
+          <li class="section-item-languages">Russian - advance</li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <div class="container-footer-container">
-        "2025"
+      <div class="footer-item">
+        2025
         <a href="https://github.com/AllaLuk" class="github nav-link">AllaLuk</a>
       </div>
-      <div>
-        <img
+      <a href="https://rs.school/courses/javascript-ru" target="_blank"
+        ><img
           class="rs-school-logo"
           src="assets/rs-school-logo.svg"
           alt="logo rs-school"
-        />
-        <a href="https://rs.school/courses/javascript-ru">rss</a>
-      </div>
+      /></a>
     </footer>
   </body>
 </html>
