fix: remove validation errors in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#contacts" class="nav-link">Contacts</a>
           </li>
           <li class="nav-item">
-            <a href="#about me" class="nav-link">About me</a>
+            <a href="#about-me" class="nav-link">About me</a>
           </li>
           <li class="nav-item">
             <a href="#skills" class="nav-link">Skills</a>
@@ -63,7 +63,7 @@
           <li class="section-item">Location: Wroclaw, Poland</li>
         </ul>
       </section>
-      <section class="section" id="about me">
+      <section class="section" id="about-me">
         <h2 class="section-title">About me</h2>
         <p>
           I'm just starting my career in frontend development, but I feel very
@@ -93,8 +93,8 @@
 
           const bmi = weight/(height*height); <br />
 
-          return bmi <= 18.5 ? 'Underweight': bmi <= 25 ? 'Normal': bmi <= 30 ?
-          'Overweight': 'Obese'; <br />
+          return bmi &lt;= 18.5 ? 'Underweight': bmi &lt;=25 ? 'Normal': bmi
+          &lt;= 30 ? 'Overweight': 'Obese'; <br />
           }
         </p>
       </section>
